--- a/MSC-Gift/src/main/webapp/resources/css/user.css
+++ b/MSC-Gift/src/main/webapp/resources/css/user.css
@@ -61,16 +61,7 @@ body {
     color: #f15222;
 }
   
-/* Registration Form ############################################### */
-/* body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-} */
+/* Registration And Login Form ############################################### */
 
 .regform {
     width: 300px;
