--- a/MSC-Gift/src/main/webapp/resources/css/crm.css
+++ b/MSC-Gift/src/main/webapp/resources/css/crm.css
@@ -52,3 +52,42 @@
     color: #700000;
     font-weight: bold;
 }
+
+
+
+/*  css for  function-header  ***********************************  */
+
+
+.function-header {
+	
+	background-color: #d9d9d9;
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+    padding: 0px 20px;
+    min-height:40px; 
+    max-height: 300px;
+    border-radius: 10px
+}
+
+.admin-actions a {
+    text-decoration: none;
+    color: #700000;
+    padding: 0px 5px;
+    border: 1px solid #700000;
+    border-radius: 5px;
+    
+}
+.admin-actions a:hover{
+	background-color: #700000;
+	color: white;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.admin-actions {
+    display: flex;
+    gap: 10px;
+}
+
