--- a/MSC-Gift/src/main/webapp/resources/css/crm.css
+++ b/MSC-Gift/src/main/webapp/resources/css/crm.css
@@ -1,48 +1,28 @@
 @charset "UTF-8";
 
-/* Home page Admin Header ############################################## */
+
+/*.info {background-color: #2196F3;}   
+.info:hover {background: #0b7dda;}  #0d6efd*/
+
+
+/* Admin Navbar ############################################## */
 
 .custom-bg{
 	background: #2196F3!important;
 }
 
-/*.info {background-color: #2196F3;}   
-.info:hover {background: #0b7dda;}*/
+/* Admin Navbar End ############################################## */
 
 
-/*  css for  function-header  ***********************************  */
 
+/* Admin Home Page FunctionHeader ############################################## */
 
-.function-header {
-	
-	background-color: #d9d9d9;
-    position: sticky;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 5px;
-    padding: 0px 20px;
-    min-height:40px; 
-    max-height: 300px;
-    border-radius: 10px
+.admin .card{
+	border:1px solid #2196F3;
 }
 
-.admin-actions a {
-    text-decoration: none;
-    color: #700000;
-    padding: 0px 5px;
-    border: 1px solid #700000;
-    border-radius: 5px;
-    
+.admin .card:hover{
+	background:  #2196F3;
+	cursor: pointer;
 }
-.admin-actions a:hover{
-	background-color: #700000;
-	color: white;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.admin-actions {
-    display: flex;
-    gap: 10px;
-}
-
+/* Admin Home Page FunctionHeader ############################################## */
