--- a/MSC-Gift/src/main/webapp/resources/admin/css/style.css
+++ b/MSC-Gift/src/main/webapp/resources/admin/css/style.css
@@ -17,3 +17,18 @@
 	width: 200px;
 }
 
+
+	#sideBar{
+		position: absolute;
+		height: 50px; 
+		width: 50px;
+		top: 50%;
+		margin: 5px;
+		padding: 0px !important;
+	}
+	
+	#sideBar img{
+		width: 100%;
+		height: 100%;
+	}
+	
