--- a/MSC-Gift/src/main/webapp/resources/css/style.css
+++ b/MSC-Gift/src/main/webapp/resources/css/style.css
@@ -742,10 +742,11 @@ h6 {
 }
 
 .sidebar-nav .nav-content a i {
-  font-size: 6px;
+  font-size: 12px;
   margin-right: 8px;
   line-height: 0;
   border-radius: 50%;
+  margin-top: 1px;
 }
 
 .sidebar-nav .nav-content a:hover,
